--- a/services/application/src/style/index.css
+++ b/services/application/src/style/index.css
@@ -28,11 +28,11 @@ body {
 }
 
 .game-card-glow {
-    z-index:3;
+    z-index:6;
 }
 
 .game-card-glow:hover {
-    z-index:3;
+    z-index:6;
     -webkit-filter: drop-shadow(1px 1px 0 rgb(255, 255, 255)) 
                     drop-shadow(-1px -1px 0 rgb(255, 255, 255));
     filter:drop-shadow(1px 1px 0 rgb(255, 255, 255)) 
